2010-05-03  James Youngman  <jay@gnu.org>

	Avoid non-portable [ x -a y ] test usage.
	* scripts/rev-freq.sh (scale): Change [ x -a y ] to [ x ] && [ y ].
	* tests/make-links (common_files): Likewise.

	Exempt ourselves from SRTEQ for all C and C++ files.
	* .x-sc_prohibit_strcmp: We don't want to use STREQ, so suppress
	this warning for C and C++ files.

	Ignore existing instances of magic contstants in calls to exit.
	* .x-sc_prohibit_magic_number_exit: Ignore existing instances of
	magic contstants in calls to exit.

	Remove trailing blank lines.
	* tests/admin/Makefile.am: Remove trailing blank lines.
	* tests/admin/abspath.sh: Likewise.
	* tests/admin/flags.sh: Likewise.
	* tests/admin/hardlinks.sh: Likewise.
	* tests/admin/i-option.sh: Likewise.
	* tests/admin/init-mr.sh: Likewise.
	* tests/admin/locks.sh: Likewise.
	* tests/admin/r-option.sh: Likewise.
	* tests/admin/t-option.sh: Likewise.
	* tests/admin/users.sh: Likewise.
	* tests/admin/y-flag.sh: Likewise.
	* tests/binary/auto.sh: Likewise.
	* tests/binary/binbasic.sh: Likewise.
	* tests/binary/diff.sh: Likewise.
	* tests/bsd-sccs/driver-basic.sh: Likewise.
	* tests/cdc/1general.sh: Likewise.
	* tests/cdc/2comment.sh: Likewise.
	* tests/cdc/3MRs.sh: Likewise.
	* tests/cdc/4order.sh: Likewise.
	* tests/common/not-root: Likewise.
	* tests/delta/MRs.sh: Likewise.
	* tests/delta/Makefile.am: Likewise.
	* tests/delta/basic.sh: Likewise.
	* tests/delta/errorcase.sh: Likewise.
	* tests/delta/nulldelta.sh: Likewise.
	* tests/delta/options.sh: Likewise.
	* tests/get/branch.sh: Likewise.
	* tests/get/create.sh: Likewise.
	* tests/get/defsid.sh: Likewise.
	* tests/get/errorcases.sh: Likewise.
	* tests/get/gg_get_ix.sh: Likewise.
	* tests/get/optorder.sh: Likewise.
	* tests/get/writable.sh: Likewise.
	* tests/initial/root.sh: Likewise.
	* tests/large/admin.sh: Likewise.
	* tests/make-links: Likewise.
	* tests/prs/Makefile.am: Likewise.
	* tests/prs/s_foo_bd_output.txt: Likewise.
	* tests/prt/TODO: Likewise.