@@ -22,7 +22,7 @@
  *    You should have received a copy of the GNU General Public License
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-#include "config.h"
+#include <config.h>
 
 #include <stdio.h>
 #include <stdlib.h>
