@@ -33,7 +33,7 @@
  * two octal digits make six bits.
  *
 */
-#include "config.h"
+#include <config.h>
 
 #include <stdio.h>
 #include <stddef.h>
